--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
     font-size: medium;
 }
 
+body{
+    overflow: hidden;
+}
+
 .navbar{
     background-color: #3787b9;
     display: flex;
@@ -28,7 +32,7 @@
 }
 
 .institution_name img{
-    width: 15%;
+    width: 10%;
     margin-right: 3%;
 }
 
@@ -88,7 +92,7 @@ fieldset:hover{
     height: 50px;
     font-size: large;
     border-radius: 5px;
-    border: 2px solid #3787b9;
+    border: none;
     background-color: #4CAF50;
     color: white;
     cursor: pointer;
@@ -101,8 +105,8 @@ fieldset:hover{
 .allocation{
     display: block;
     font-size: large;
-    margin: 5%;
-    width: 50%;
+    margin: 2%;
+    width: 60%;
     line-height: 2;
     word-spacing: 5px;
     border-radius: 5px;
@@ -125,4 +129,10 @@ fieldset:hover{
     100%{
         box-shadow: 0px 0px 10px 0px rgba(255,127,127,1);
     }
+}
+
+.hr_line{
+    opacity: 0.3;
+    width: 75%;
+    margin: 1%;
 }
